Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132564

qwebengine-convert-dict fails on .dic wordlist

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.2, 6.9.0 Beta2, 6.10.0 FF
    • 6.7.3
    • WebEngine
    • None
    • MacOs 14.7.2 on M1
      Homebrew 4.4.14
    • macOS
    • 95e926d3b (dev), 9c4230280 (6.9), 7e1eb0a37 (6.8)

      Hello, i was trying to convert this attached file in .dic format to .bdic format using qwebengine-convert-dict.

      I've got this error

      Serializing...
      Verifying...
      Word does not match!
        Index:    3459
        Expected: এলাকার্রনিত্যনৈমিত্তিক্রঘটনা
        Actual:   এলাকার্রনিত্যনৈমিত্তি
      ERROR converting, the dictionary does not check out OK.

      I think it's one word causing this issue. It works perfectly if i try to convert only a cut down part of this dictionary.

      Looking at https://code.qt.io/cgit/qt/qtwebengine.git/tree/src/core/tools/qwebengine_convert_dict/main.cpp , I think that the problem is caused by 

      third_party/hunspell/google/bdict_writer.h

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            moheim Moss Heim
            federicamc Federica C
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes