qwebengine_convert_dict: fix word length limit

The conversion tool had an implicit limit of 128 bytes, which was too
short for the entries in the supplied Bengali dic file. Instead we read
into a dynamically sized std::string.

Fixes: QTBUG-132564
Pick-to: 6.8
Change-Id: I250904ef809ccbd9a110e87cd6b940c401f71f78
Reviewed-by: Anu Aliyas <anu.aliyas@qt.io>
(cherry picked from commit 95e926d3b9452d38289e3832e3e044c08b4a7e32)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>